# news-insights

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: ingest.ps1  predict.ps1  schedule.ps1  setup.ps1  train.ps1
src/news_insights/: cli.py  config.py  logging.py
src/news_insights/db/: __init__.py  base.py  models.py
src/news_insights/ingestion/: extract.py  feeds.py
src/news_insights/ml/: inference.py
tests/: test_smoke.py
